# Arklumos

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  README.md  build.bat  premake5.lua
Arklumos/: CMakeLists.txt  premake5.lua
Arklumos/src/: Arklumos.h  akpch.cpp  akpch.h
Arklumos/src/Arklumos/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Arklumos/src/Arklumos/Core/: Application.cpp  Application.h  Assert.h  Base.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  PlatformDetection.h  Timer.h  Timestep.h  Window.cpp  Window.h
Arklumos/src/Arklumos/Debug/: Instrumentor.h
Arklumos/src/Arklumos/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Arklumos/src/Arklumos/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Arklumos/src/Arklumos/Math/: Math.cpp  Math.h
Arklumos/src/Arklumos/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Arklumos/src/Arklumos/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Arklumos/src/Arklumos/Utils/: PlatformUtils.h
Arklumos/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Arklumos/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Arklusis/: CMakeLists.txt  premake5.lua
Arklusis/assets/scenes/: RainbowBlock.arklumos
Arklusis/src/: ArklusisApp.cpp  EditorLayer.cpp  EditorLayer.h
Arklusis/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
TestBox/: CMakeLists.txt  premake5.lua
TestBox/src/: ExampleLayer.cpp  ExampleLayer.h  Testbox.cpp  Testbox2D.cpp  Testbox2D.h
acmake-required/: imgui--CMakeLists.txt  imgui-premake5.lua  imguizmo-CMakeLists.txt  info-arch-linux-sd.txt  linuxsd-build.sh
scripts/: Setup.py  SetupPremake.py  SetupPython.py  SetupVulkan.py  Utils.py  build.bat
